Projects/PLFinalProject/Attempt 1/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> exp
Rule 1     exp -> atom
Rule 2     exp -> quoted_list
Rule 3     exp -> call
Rule 4     quoted_list -> QUOTE list
Rule 5     list -> LPAREN items RPAREN
Rule 6     items -> item items
Rule 7     items -> empty
Rule 8     empty -> <empty>
Rule 9     item -> atom
Rule 10    item -> quoted_list
Rule 11    item -> call
Rule 12    item -> empty
Rule 13    call -> LPAREN SIMB items RPAREN
Rule 14    atom -> SIMB
Rule 15    atom -> bool
Rule 16    atom -> NUM
Rule 17    atom -> FLOAT
Rule 18    atom -> TEXT
Rule 19    atom -> <empty>
Rule 20    bool -> TRUE
Rule 21    bool -> FALSE
Rule 22    atom -> NIL

Terminals, with rules where they appear

FALSE                : 21
FLOAT                : 17
LPAREN               : 5 13
NIL                  : 22
NUM                  : 16
QUOTE                : 4
RPAREN               : 5 13
SIMB                 : 13 14
TEXT                 : 18
TRUE                 : 20
error                : 

Nonterminals, with rules where they appear

atom                 : 1 9
bool                 : 15
call                 : 3 11
empty                : 7 12
exp                  : 0
item                 : 6
items                : 5 6 13
list                 : 4
quoted_list          : 2 10

Parsing method: LALR

state 0

    (0) S' -> . exp
    (1) exp -> . atom
    (2) exp -> . quoted_list
    (3) exp -> . call
    (14) atom -> . SIMB
    (15) atom -> . bool
    (16) atom -> . NUM
    (17) atom -> . FLOAT
    (18) atom -> . TEXT
    (19) atom -> .
    (22) atom -> . NIL
    (4) quoted_list -> . QUOTE list
    (13) call -> . LPAREN SIMB items RPAREN
    (20) bool -> . TRUE
    (21) bool -> . FALSE

    SIMB            shift and go to state 9
    NUM             shift and go to state 4
    FLOAT           shift and go to state 2
    TEXT            shift and go to state 8
    $end            reduce using rule 19 (atom -> .)
    NIL             shift and go to state 11
    QUOTE           shift and go to state 1
    LPAREN          shift and go to state 5
    TRUE            shift and go to state 6
    FALSE           shift and go to state 12

    bool                           shift and go to state 3
    quoted_list                    shift and go to state 7
    call                           shift and go to state 10
    exp                            shift and go to state 13
    atom                           shift and go to state 14

state 1

    (4) quoted_list -> QUOTE . list
    (5) list -> . LPAREN items RPAREN

    LPAREN          shift and go to state 15

    list                           shift and go to state 16

state 2

    (17) atom -> FLOAT .

    $end            reduce using rule 17 (atom -> FLOAT .)
    SIMB            reduce using rule 17 (atom -> FLOAT .)
    NUM             reduce using rule 17 (atom -> FLOAT .)
    FLOAT           reduce using rule 17 (atom -> FLOAT .)
    TEXT            reduce using rule 17 (atom -> FLOAT .)
    NIL             reduce using rule 17 (atom -> FLOAT .)
    QUOTE           reduce using rule 17 (atom -> FLOAT .)
    LPAREN          reduce using rule 17 (atom -> FLOAT .)
    TRUE            reduce using rule 17 (atom -> FLOAT .)
    FALSE           reduce using rule 17 (atom -> FLOAT .)
    RPAREN          reduce using rule 17 (atom -> FLOAT .)


state 3

    (15) atom -> bool .

    $end            reduce using rule 15 (atom -> bool .)
    SIMB            reduce using rule 15 (atom -> bool .)
    NUM             reduce using rule 15 (atom -> bool .)
    FLOAT           reduce using rule 15 (atom -> bool .)
    TEXT            reduce using rule 15 (atom -> bool .)
    NIL             reduce using rule 15 (atom -> bool .)
    QUOTE           reduce using rule 15 (atom -> bool .)
    LPAREN          reduce using rule 15 (atom -> bool .)
    TRUE            reduce using rule 15 (atom -> bool .)
    FALSE           reduce using rule 15 (atom -> bool .)
    RPAREN          reduce using rule 15 (atom -> bool .)


state 4

    (16) atom -> NUM .

    $end            reduce using rule 16 (atom -> NUM .)
    SIMB            reduce using rule 16 (atom -> NUM .)
    NUM             reduce using rule 16 (atom -> NUM .)
    FLOAT           reduce using rule 16 (atom -> NUM .)
    TEXT            reduce using rule 16 (atom -> NUM .)
    NIL             reduce using rule 16 (atom -> NUM .)
    QUOTE           reduce using rule 16 (atom -> NUM .)
    LPAREN          reduce using rule 16 (atom -> NUM .)
    TRUE            reduce using rule 16 (atom -> NUM .)
    FALSE           reduce using rule 16 (atom -> NUM .)
    RPAREN          reduce using rule 16 (atom -> NUM .)


state 5

    (13) call -> LPAREN . SIMB items RPAREN

    SIMB            shift and go to state 17


state 6

    (20) bool -> TRUE .

    SIMB            reduce using rule 20 (bool -> TRUE .)
    NUM             reduce using rule 20 (bool -> TRUE .)
    FLOAT           reduce using rule 20 (bool -> TRUE .)
    TEXT            reduce using rule 20 (bool -> TRUE .)
    NIL             reduce using rule 20 (bool -> TRUE .)
    QUOTE           reduce using rule 20 (bool -> TRUE .)
    LPAREN          reduce using rule 20 (bool -> TRUE .)
    TRUE            reduce using rule 20 (bool -> TRUE .)
    FALSE           reduce using rule 20 (bool -> TRUE .)
    RPAREN          reduce using rule 20 (bool -> TRUE .)
    $end            reduce using rule 20 (bool -> TRUE .)


state 7

    (2) exp -> quoted_list .

    $end            reduce using rule 2 (exp -> quoted_list .)


state 8

    (18) atom -> TEXT .

    $end            reduce using rule 18 (atom -> TEXT .)
    SIMB            reduce using rule 18 (atom -> TEXT .)
    NUM             reduce using rule 18 (atom -> TEXT .)
    FLOAT           reduce using rule 18 (atom -> TEXT .)
    TEXT            reduce using rule 18 (atom -> TEXT .)
    NIL             reduce using rule 18 (atom -> TEXT .)
    QUOTE           reduce using rule 18 (atom -> TEXT .)
    LPAREN          reduce using rule 18 (atom -> TEXT .)
    TRUE            reduce using rule 18 (atom -> TEXT .)
    FALSE           reduce using rule 18 (atom -> TEXT .)
    RPAREN          reduce using rule 18 (atom -> TEXT .)


state 9

    (14) atom -> SIMB .

    $end            reduce using rule 14 (atom -> SIMB .)
    SIMB            reduce using rule 14 (atom -> SIMB .)
    NUM             reduce using rule 14 (atom -> SIMB .)
    FLOAT           reduce using rule 14 (atom -> SIMB .)
    TEXT            reduce using rule 14 (atom -> SIMB .)
    NIL             reduce using rule 14 (atom -> SIMB .)
    QUOTE           reduce using rule 14 (atom -> SIMB .)
    LPAREN          reduce using rule 14 (atom -> SIMB .)
    TRUE            reduce using rule 14 (atom -> SIMB .)
    FALSE           reduce using rule 14 (atom -> SIMB .)
    RPAREN          reduce using rule 14 (atom -> SIMB .)


state 10

    (3) exp -> call .

    $end            reduce using rule 3 (exp -> call .)


state 11

    (22) atom -> NIL .

    $end            reduce using rule 22 (atom -> NIL .)
    SIMB            reduce using rule 22 (atom -> NIL .)
    NUM             reduce using rule 22 (atom -> NIL .)
    FLOAT           reduce using rule 22 (atom -> NIL .)
    TEXT            reduce using rule 22 (atom -> NIL .)
    NIL             reduce using rule 22 (atom -> NIL .)
    QUOTE           reduce using rule 22 (atom -> NIL .)
    LPAREN          reduce using rule 22 (atom -> NIL .)
    TRUE            reduce using rule 22 (atom -> NIL .)
    FALSE           reduce using rule 22 (atom -> NIL .)
    RPAREN          reduce using rule 22 (atom -> NIL .)


state 12

    (21) bool -> FALSE .

    SIMB            reduce using rule 21 (bool -> FALSE .)
    NUM             reduce using rule 21 (bool -> FALSE .)
    FLOAT           reduce using rule 21 (bool -> FALSE .)
    TEXT            reduce using rule 21 (bool -> FALSE .)
    NIL             reduce using rule 21 (bool -> FALSE .)
    QUOTE           reduce using rule 21 (bool -> FALSE .)
    LPAREN          reduce using rule 21 (bool -> FALSE .)
    TRUE            reduce using rule 21 (bool -> FALSE .)
    FALSE           reduce using rule 21 (bool -> FALSE .)
    RPAREN          reduce using rule 21 (bool -> FALSE .)
    $end            reduce using rule 21 (bool -> FALSE .)


state 13

    (0) S' -> exp .



state 14

    (1) exp -> atom .

    $end            reduce using rule 1 (exp -> atom .)


state 15

    (5) list -> LPAREN . items RPAREN
    (6) items -> . item items
    (7) items -> . empty
    (9) item -> . atom
    (10) item -> . quoted_list
    (11) item -> . call
    (12) item -> . empty
    (8) empty -> .
    (14) atom -> . SIMB
    (15) atom -> . bool
    (16) atom -> . NUM
    (17) atom -> . FLOAT
    (18) atom -> . TEXT
    (19) atom -> .
    (22) atom -> . NIL
    (4) quoted_list -> . QUOTE list
    (13) call -> . LPAREN SIMB items RPAREN
    (20) bool -> . TRUE
    (21) bool -> . FALSE

  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! reduce/reduce conflict for NIL resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for QUOTE resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for LPAREN resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for TRUE resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for FALSE resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 8 (empty -> .)
  ! shift/reduce conflict for NIL resolved as shift
  ! shift/reduce conflict for QUOTE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    RPAREN          reduce using rule 8 (empty -> .)
    SIMB            shift and go to state 9
    NUM             shift and go to state 4
    FLOAT           shift and go to state 2
    TEXT            shift and go to state 8
    NIL             shift and go to state 11
    QUOTE           shift and go to state 1
    LPAREN          shift and go to state 5
    TRUE            shift and go to state 6
    FALSE           shift and go to state 12

  ! SIMB            [ reduce using rule 8 (empty -> .) ]
  ! NUM             [ reduce using rule 8 (empty -> .) ]
  ! FLOAT           [ reduce using rule 8 (empty -> .) ]
  ! TEXT            [ reduce using rule 8 (empty -> .) ]
  ! NIL             [ reduce using rule 8 (empty -> .) ]
  ! QUOTE           [ reduce using rule 8 (empty -> .) ]
  ! LPAREN          [ reduce using rule 8 (empty -> .) ]
  ! TRUE            [ reduce using rule 8 (empty -> .) ]
  ! FALSE           [ reduce using rule 8 (empty -> .) ]
  ! SIMB            [ reduce using rule 19 (atom -> .) ]
  ! NUM             [ reduce using rule 19 (atom -> .) ]
  ! FLOAT           [ reduce using rule 19 (atom -> .) ]
  ! TEXT            [ reduce using rule 19 (atom -> .) ]
  ! NIL             [ reduce using rule 19 (atom -> .) ]
  ! QUOTE           [ reduce using rule 19 (atom -> .) ]
  ! LPAREN          [ reduce using rule 19 (atom -> .) ]
  ! TRUE            [ reduce using rule 19 (atom -> .) ]
  ! FALSE           [ reduce using rule 19 (atom -> .) ]
  ! RPAREN          [ reduce using rule 19 (atom -> .) ]

    item                           shift and go to state 18
    bool                           shift and go to state 3
    quoted_list                    shift and go to state 19
    empty                          shift and go to state 20
    call                           shift and go to state 21
    atom                           shift and go to state 22
    items                          shift and go to state 23

state 16

    (4) quoted_list -> QUOTE list .

    SIMB            reduce using rule 4 (quoted_list -> QUOTE list .)
    NUM             reduce using rule 4 (quoted_list -> QUOTE list .)
    FLOAT           reduce using rule 4 (quoted_list -> QUOTE list .)
    TEXT            reduce using rule 4 (quoted_list -> QUOTE list .)
    NIL             reduce using rule 4 (quoted_list -> QUOTE list .)
    QUOTE           reduce using rule 4 (quoted_list -> QUOTE list .)
    LPAREN          reduce using rule 4 (quoted_list -> QUOTE list .)
    TRUE            reduce using rule 4 (quoted_list -> QUOTE list .)
    FALSE           reduce using rule 4 (quoted_list -> QUOTE list .)
    RPAREN          reduce using rule 4 (quoted_list -> QUOTE list .)
    $end            reduce using rule 4 (quoted_list -> QUOTE list .)


state 17

    (13) call -> LPAREN SIMB . items RPAREN
    (6) items -> . item items
    (7) items -> . empty
    (9) item -> . atom
    (10) item -> . quoted_list
    (11) item -> . call
    (12) item -> . empty
    (8) empty -> .
    (14) atom -> . SIMB
    (15) atom -> . bool
    (16) atom -> . NUM
    (17) atom -> . FLOAT
    (18) atom -> . TEXT
    (19) atom -> .
    (22) atom -> . NIL
    (4) quoted_list -> . QUOTE list
    (13) call -> . LPAREN SIMB items RPAREN
    (20) bool -> . TRUE
    (21) bool -> . FALSE

  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! reduce/reduce conflict for NIL resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for QUOTE resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for LPAREN resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for TRUE resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for FALSE resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 8 (empty -> .)
  ! shift/reduce conflict for NIL resolved as shift
  ! shift/reduce conflict for QUOTE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    RPAREN          reduce using rule 8 (empty -> .)
    SIMB            shift and go to state 9
    NUM             shift and go to state 4
    FLOAT           shift and go to state 2
    TEXT            shift and go to state 8
    NIL             shift and go to state 11
    QUOTE           shift and go to state 1
    LPAREN          shift and go to state 5
    TRUE            shift and go to state 6
    FALSE           shift and go to state 12

  ! SIMB            [ reduce using rule 8 (empty -> .) ]
  ! NUM             [ reduce using rule 8 (empty -> .) ]
  ! FLOAT           [ reduce using rule 8 (empty -> .) ]
  ! TEXT            [ reduce using rule 8 (empty -> .) ]
  ! NIL             [ reduce using rule 8 (empty -> .) ]
  ! QUOTE           [ reduce using rule 8 (empty -> .) ]
  ! LPAREN          [ reduce using rule 8 (empty -> .) ]
  ! TRUE            [ reduce using rule 8 (empty -> .) ]
  ! FALSE           [ reduce using rule 8 (empty -> .) ]
  ! SIMB            [ reduce using rule 19 (atom -> .) ]
  ! NUM             [ reduce using rule 19 (atom -> .) ]
  ! FLOAT           [ reduce using rule 19 (atom -> .) ]
  ! TEXT            [ reduce using rule 19 (atom -> .) ]
  ! NIL             [ reduce using rule 19 (atom -> .) ]
  ! QUOTE           [ reduce using rule 19 (atom -> .) ]
  ! LPAREN          [ reduce using rule 19 (atom -> .) ]
  ! TRUE            [ reduce using rule 19 (atom -> .) ]
  ! FALSE           [ reduce using rule 19 (atom -> .) ]
  ! RPAREN          [ reduce using rule 19 (atom -> .) ]

    item                           shift and go to state 18
    bool                           shift and go to state 3
    quoted_list                    shift and go to state 19
    empty                          shift and go to state 20
    call                           shift and go to state 21
    atom                           shift and go to state 22
    items                          shift and go to state 24

state 18

    (6) items -> item . items
    (6) items -> . item items
    (7) items -> . empty
    (9) item -> . atom
    (10) item -> . quoted_list
    (11) item -> . call
    (12) item -> . empty
    (8) empty -> .
    (14) atom -> . SIMB
    (15) atom -> . bool
    (16) atom -> . NUM
    (17) atom -> . FLOAT
    (18) atom -> . TEXT
    (19) atom -> .
    (22) atom -> . NIL
    (4) quoted_list -> . QUOTE list
    (13) call -> . LPAREN SIMB items RPAREN
    (20) bool -> . TRUE
    (21) bool -> . FALSE

  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! shift/reduce conflict for SIMB resolved as shift
  ! shift/reduce conflict for NUM resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for TEXT resolved as shift
  ! reduce/reduce conflict for NIL resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for QUOTE resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for LPAREN resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for TRUE resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for FALSE resolved using rule 8 (empty -> .)
  ! reduce/reduce conflict for RPAREN resolved using rule 8 (empty -> .)
  ! shift/reduce conflict for NIL resolved as shift
  ! shift/reduce conflict for QUOTE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    RPAREN          reduce using rule 8 (empty -> .)
    SIMB            shift and go to state 9
    NUM             shift and go to state 4
    FLOAT           shift and go to state 2
    TEXT            shift and go to state 8
    NIL             shift and go to state 11
    QUOTE           shift and go to state 1
    LPAREN          shift and go to state 5
    TRUE            shift and go to state 6
    FALSE           shift and go to state 12

  ! SIMB            [ reduce using rule 8 (empty -> .) ]
  ! NUM             [ reduce using rule 8 (empty -> .) ]
  ! FLOAT           [ reduce using rule 8 (empty -> .) ]
  ! TEXT            [ reduce using rule 8 (empty -> .) ]
  ! NIL             [ reduce using rule 8 (empty -> .) ]
  ! QUOTE           [ reduce using rule 8 (empty -> .) ]
  ! LPAREN          [ reduce using rule 8 (empty -> .) ]
  ! TRUE            [ reduce using rule 8 (empty -> .) ]
  ! FALSE           [ reduce using rule 8 (empty -> .) ]
  ! SIMB            [ reduce using rule 19 (atom -> .) ]
  ! NUM             [ reduce using rule 19 (atom -> .) ]
  ! FLOAT           [ reduce using rule 19 (atom -> .) ]
  ! TEXT            [ reduce using rule 19 (atom -> .) ]
  ! NIL             [ reduce using rule 19 (atom -> .) ]
  ! QUOTE           [ reduce using rule 19 (atom -> .) ]
  ! LPAREN          [ reduce using rule 19 (atom -> .) ]
  ! TRUE            [ reduce using rule 19 (atom -> .) ]
  ! FALSE           [ reduce using rule 19 (atom -> .) ]
  ! RPAREN          [ reduce using rule 19 (atom -> .) ]

    item                           shift and go to state 18
    bool                           shift and go to state 3
    quoted_list                    shift and go to state 19
    empty                          shift and go to state 20
    call                           shift and go to state 21
    atom                           shift and go to state 22
    items                          shift and go to state 25

state 19

    (10) item -> quoted_list .

    SIMB            reduce using rule 10 (item -> quoted_list .)
    NUM             reduce using rule 10 (item -> quoted_list .)
    FLOAT           reduce using rule 10 (item -> quoted_list .)
    TEXT            reduce using rule 10 (item -> quoted_list .)
    NIL             reduce using rule 10 (item -> quoted_list .)
    QUOTE           reduce using rule 10 (item -> quoted_list .)
    LPAREN          reduce using rule 10 (item -> quoted_list .)
    TRUE            reduce using rule 10 (item -> quoted_list .)
    FALSE           reduce using rule 10 (item -> quoted_list .)
    RPAREN          reduce using rule 10 (item -> quoted_list .)


state 20

    (7) items -> empty .
    (12) item -> empty .

  ! reduce/reduce conflict for RPAREN resolved using rule 7 (items -> empty .)
    RPAREN          reduce using rule 7 (items -> empty .)
    SIMB            reduce using rule 12 (item -> empty .)
    NUM             reduce using rule 12 (item -> empty .)
    FLOAT           reduce using rule 12 (item -> empty .)
    TEXT            reduce using rule 12 (item -> empty .)
    NIL             reduce using rule 12 (item -> empty .)
    QUOTE           reduce using rule 12 (item -> empty .)
    LPAREN          reduce using rule 12 (item -> empty .)
    TRUE            reduce using rule 12 (item -> empty .)
    FALSE           reduce using rule 12 (item -> empty .)

  ! RPAREN          [ reduce using rule 12 (item -> empty .) ]


state 21

    (11) item -> call .

    SIMB            reduce using rule 11 (item -> call .)
    NUM             reduce using rule 11 (item -> call .)
    FLOAT           reduce using rule 11 (item -> call .)
    TEXT            reduce using rule 11 (item -> call .)
    NIL             reduce using rule 11 (item -> call .)
    QUOTE           reduce using rule 11 (item -> call .)
    LPAREN          reduce using rule 11 (item -> call .)
    TRUE            reduce using rule 11 (item -> call .)
    FALSE           reduce using rule 11 (item -> call .)
    RPAREN          reduce using rule 11 (item -> call .)


state 22

    (9) item -> atom .

    SIMB            reduce using rule 9 (item -> atom .)
    NUM             reduce using rule 9 (item -> atom .)
    FLOAT           reduce using rule 9 (item -> atom .)
    TEXT            reduce using rule 9 (item -> atom .)
    NIL             reduce using rule 9 (item -> atom .)
    QUOTE           reduce using rule 9 (item -> atom .)
    LPAREN          reduce using rule 9 (item -> atom .)
    TRUE            reduce using rule 9 (item -> atom .)
    FALSE           reduce using rule 9 (item -> atom .)
    RPAREN          reduce using rule 9 (item -> atom .)


state 23

    (5) list -> LPAREN items . RPAREN

    RPAREN          shift and go to state 26


state 24

    (13) call -> LPAREN SIMB items . RPAREN

    RPAREN          shift and go to state 27


state 25

    (6) items -> item items .

    RPAREN          reduce using rule 6 (items -> item items .)


state 26

    (5) list -> LPAREN items RPAREN .

    $end            reduce using rule 5 (list -> LPAREN items RPAREN .)
    SIMB            reduce using rule 5 (list -> LPAREN items RPAREN .)
    NUM             reduce using rule 5 (list -> LPAREN items RPAREN .)
    FLOAT           reduce using rule 5 (list -> LPAREN items RPAREN .)
    TEXT            reduce using rule 5 (list -> LPAREN items RPAREN .)
    NIL             reduce using rule 5 (list -> LPAREN items RPAREN .)
    QUOTE           reduce using rule 5 (list -> LPAREN items RPAREN .)
    LPAREN          reduce using rule 5 (list -> LPAREN items RPAREN .)
    TRUE            reduce using rule 5 (list -> LPAREN items RPAREN .)
    FALSE           reduce using rule 5 (list -> LPAREN items RPAREN .)
    RPAREN          reduce using rule 5 (list -> LPAREN items RPAREN .)


state 27

    (13) call -> LPAREN SIMB items RPAREN .

    SIMB            reduce using rule 13 (call -> LPAREN SIMB items RPAREN .)
    NUM             reduce using rule 13 (call -> LPAREN SIMB items RPAREN .)
    FLOAT           reduce using rule 13 (call -> LPAREN SIMB items RPAREN .)
    TEXT            reduce using rule 13 (call -> LPAREN SIMB items RPAREN .)
    NIL             reduce using rule 13 (call -> LPAREN SIMB items RPAREN .)
    QUOTE           reduce using rule 13 (call -> LPAREN SIMB items RPAREN .)
    LPAREN          reduce using rule 13 (call -> LPAREN SIMB items RPAREN .)
    TRUE            reduce 